--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ajv": "^8.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "tailwindcss": "^3.4.14"
   }
 }
